// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Remote Media component snapshot matches snapshot of disabled remote audio 1`] = `
<div
  className="wxc-remote-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of disabled remote video 1`] = `
<div
  className="wxc-remote-media"
>
  <audio
    autoPlay={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of enabled remote audio & video 1`] = `
<div
  className="wxc-remote-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
  <audio
    autoPlay={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of enabled remote audio & video with custom CSS class 1`] = `
<div
  className="wxc-remote-media my-custom-class"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
  <audio
    autoPlay={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of no remote members 1`] = `
<div
  className="wxc-remote-media"
>
  <h4>
    Waiting for others to join...
  </h4>
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot on error 1`] = `
<div
  className="wxc-remote-media"
>
  <AlertBanner
    className=""
    closable={false}
    closeBtnProps={null}
    onHide={null}
    onKeyDownClose={null}
    show={true}
    type="warning"
  >
    Having trouble joining the meeting? Please check your connection.
  </AlertBanner>
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot while loading 1`] = `
<div
  className="wxc-remote-media"
>
  <Badge
    className=""
    rounded={true}
  >
    <Spinner
      className=""
      color="black"
      percentage={null}
      showCheck={false}
      showPercentage={false}
      size={16}
    />
    <div>
      Connecting
    </div>
  </Badge>
</div>
`;
